# atomik

./: .gitignore  CMakeLists.txt  README.md  environment.devenv.yml
Atomik/: Algorithms.hpp  Algorithms.test.cxx  Atomik.hpp  Atomik.test.cxx  CMakeLists.txt  ChemicalElement.cpp  ChemicalElement.hpp  ChemicalElements.cpp  ChemicalElements.hpp  ChemicalFormula.cpp  ChemicalFormula.cxx  ChemicalFormula.hpp  ChemicalFormula.test.cxx  ChemicalSubstance.cpp  ChemicalSubstance.hpp  Database.cpp  Database.hpp  Element.cpp  Element.hpp  Element.test.cxx  ElementDatabase.cpp  ElementDatabase.hpp  Elements.cpp  Elements.hpp  Elements.test.cxx  Exception.hpp  Extract.hpp  Extract.test.cxx  Formula.cpp  Formula.cxx  Formula.hpp  ForwardDecl.hpp  Functional.hpp  Index.hpp  JSON.hpp  Parameters.cpp  Parameters.hpp  Parameters.test.cxx  Serialization.cpp  Serialization.hpp  (+24 more)
cmake/FindDeps/: All.cmake  Public.cmake
data/: elements.yml
examples/cmake-project/: CMakeLists.txt  README.md  main.cpp
tests/: CMakeLists.txt  tests.cpp
